<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#1DE9B6">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_margin="10dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFirstName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSignUp"
        android:layout_alignParentStart="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:background="#1DE9B6"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSureName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSignUp"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/tilFirstName"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:background="#1DE9B6"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilFirstName"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number_or_email"
            android:background="#1DE9B6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilNumber"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:background="#1DE9B6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvDateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/date_of_birth"
        android:layout_below="@id/tilPassword" />

    <Spinner
        android:id="@+id/sDate"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDateOfBirth"
        android:entries="@array/date"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />

    <Spinner
        android:id="@+id/sMonth"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDateOfBirth"
        android:layout_toEndOf="@id/sDate"
        android:entries="@array/month"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />

    <Spinner
        android:id="@+id/sYear"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDateOfBirth"
        android:layout_toEndOf="@id/sMonth"
        android:entries="@array/year"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sDate"
        android:text="@string/gender"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvGender"
        android:orientation='horizontal'>

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgGender"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_up" />

</android.widget.RelativeLayout>